# mathmark

./: .gitignore  CLAUDE.md  LICENSE  README.md  config.yaml  pyproject.toml
docs/: architecture.md  attack_resistance.md  limitations.md  user-guide.md
examples/: embed_workflow.py  verify_workflow.py
models/: .gitkeep
sandbox/: README.md  run.py
signatures/: default.json
src/mathmark/: __init__.py
src/mathmark/attacks/: __init__.py  diffusion_regen.py  local_blur.py  social_compress.py
src/mathmark/cli/: main.py
src/mathmark/core/: __init__.py  config.py  pipeline.py  secret.py  types.py
src/mathmark/crypto/: __init__.py  hashing.py  keys.py
src/mathmark/layers/: __init__.py  l1_fingerprint.py  l2_visible.py  l3a_trustmark.py  l3b_dwt_dct_svd.py  l3c_cox_spread.py  l4_semantic.py  l5_metadata.py  l6_c2pa.py
src/mathmark/semantic/: __init__.py  example_db.py  injector.py  ocr.py  recognizer.py  step_matcher.py  symbol_matcher.py
src/mathmark/utils/: __init__.py  image_io.py  perf.py
src/mathmark/verify/: __init__.py  consensus.py  extractor.py  report.py
tests/: test_attack_resistance.py  test_cli.py  test_layers.py  test_pipeline.py  test_semantic.py
