[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mathmark"
version = "0.1.0"
description = "MathMark - 多层抗AI去水印工具，专为数学教学内容版权保护设计"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "MathMark Project"},
]
keywords = ["watermark", "math", "education", "copyright", "anti-ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Security :: Cryptography",
]

# 核心依赖 - 精简版,只包含必要的
dependencies = [
    # 基础图像处理
    "numpy>=1.24",
    "Pillow>=10.0",
    "opencv-python>=4.8",
    "scipy>=1.11",

    # 水印
    "invisible-watermark>=0.2",  # DWT-DCT-SVD
    "imagehash>=4.3",             # pHash/dHash
    "piexif>=1.1",                # EXIF

    # 签名与哈希
    "cryptography>=41.0",

    # 编排
    "PyYAML>=6.0",
]

# 可选依赖 - 按需安装
[project.optional-dependencies]
deep = [
    "onnxruntime>=1.16",          # TrustMark推理
    "trustmark>=0.5",             # Adobe TrustMark
]
ocr = [
    "pytesseract>=0.3.10",
    "paddleocr>=2.7",             # 中文+数学OCR
]
crypto_advanced = [
    "c2pa-python>=0.4",           # C2PA manifest
]
cli = [
    "typer>=0.9",
    "rich>=13.0",
]
gui = [
    "PyQt5>=5.15",
]
report = [
    "reportlab>=4.0",
    "jinja2>=3.1",
]
dev = [
    "pytest>=7.4",
    "pytest-benchmark",
    "pytest-cov",
    "black",
    "ruff",
    "mypy",
]
all = [
    "mathmark[deep,ocr,crypto_advanced,cli,gui,report,dev]"
]

[project.scripts]
mathmark = "mathmark.cli.main:app"

[project.urls]
Homepage = "https://github.com/brbisheng/mathmark"
Documentation = "https://github.com/brbisheng/mathmark/blob/main/docs/"
Issues = "https://github.com/brbisheng/mathmark/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mathmark = ["py.typed", "data/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "PT"]
ignore = ["E501"]  # line-too-long handled by black
